# ComfyUI-Notifier

./: API_FORMAT_PARAMETERS.md  CODE_CHANGES_DIFF.md  FEATURE_UPDATES.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  test.py  test_format_parameters.py  文件说明.md
notifier/: base.py  discord_bot.py  media_adapter.py  notify.py  telegram_bot.py  yike.py
